<resources>
    <string name="app_name">Toto Checker</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_6_42">6 / 42</string>
    <string name="vtoro_teglene">Второ теглене</string>
    <string name="pyrvo_teglene">Първо теглене</string>
    <string name="_5_35">5 / 35</string>
    <string name="_6_49">6 / 49</string>
    <string name="check_match_numbers">Провери</string>
</resources>