<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout

        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                app:title="@string/app_name"
                app:titleTextColor="@color/white" />

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:visibility="gone" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_649"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6_49"
                android:textAlignment="center"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_49"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                tools:visibility="gone" />


            <TextView
                android:id="@+id/txt_535"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5_35"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_first_35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pyrvo_teglene"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_first_35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                tools:visibility="gone" />


            <TextView
                android:id="@+id/txt_second_35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vtoro_teglene"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_second_35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                tools:visibility="gone" />


            <TextView
                android:id="@+id/txt_642"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6_42"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_view_42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                tools:visibility="gone" />


        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_drawer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/nav_menu" />
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>